--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
        <section>
-        <h1>hello</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam cupiditate minima quis quisquam repellat repudiandae obcaecati sunt accusamus aperiam eveniet consequuntur tenetur odio, qui esse soluta nulla a inventore sed.</p>
        </section>
 </body>
 </html>
