--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./output.css">
 </head>
+
 <body>
-       <section>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam cupiditate minima quis quisquam repellat repudiandae obcaecati sunt accusamus aperiam eveniet consequuntur tenetur odio, qui esse soluta nulla a inventore sed.</p>
-       </section>
+    <section>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam cupiditate minima quis quisquam repellat
+            repudiandae obcaecati sunt accusamus aperiam eveniet consequuntur tenetur odio, qui esse soluta nulla a
+            inventore sed.</p>
+    </section>
 </body>
+
 </html>
